# fw-qc-migrate-segmentation-files

./: Dockerfile  README.md  manifest.json  pyproject.toml  requirements.txt  run.py
fw_gear_qc_migrate_files/: __init__.py  main.py  migration_functions.py  parser.py  run_level.py
