[tool.poetry]
name = "fw_gear_copy_files_2_acq"
version = "0.0.0"
description = "Copy pre-processed files to acquisition"
authors = ["D3b-TIRU <flywheel@d3b.center>"]
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://github.com/d3b-center/fw-qc-migrate-segmentation-files"

[tool.poetry.dependencies]
python = "^3.9"
flywheel-gear-toolkit = "^0.5"
fw-core-client = "^1.0.2"
fw-file = "^1.0.3"
flywheel-sdk = "^16.16.7"
pandas = "1.5.3"
nibabel = "3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
